--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -15,8 +15,8 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jss/9.8.1/jss.min.js"></script>   
       <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>    
       <script type="module">
-         import { GlobalTheme, GlobalStyles } from '/Theme.js'
-         import {attach_styles} from '/attach-styles.js';
+         import { GlobalTheme, GlobalStyles } from './Theme.js'
+         import {attach_styles} from './attach-styles.js';
          attach_styles(GlobalTheme, GlobalStyles, 'classes');
       </script>    
     </head>
