--- a/content_builder/src/html/themes/individual/IndividualPageComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualPageComponent.html
@@ -27,6 +27,7 @@
             <div class="classes.individual_bg">
                 <div class="classes.individual_inner_bg">
                     <div class="classes.individual_header">
+                        <img class="classes.individual_header_image" src="./../../images/profile-bannerbg.jpg" />
                         <div data-component-props="onClick={this.props.handleEditClick} style={this.props.button_style}" id="edit_button" class="classes.individual_edit_button">
                             Edit
                         </div>
