--- a/content_builder/src/html/themes/admin/OrganizationAdminRosterComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminRosterComponent.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Organization Admin Roster</title>
+      <title>Organization Admin Blog</title>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" integrity="sha256-oDCP2dNW17Y1QhBwQ+u2kLaKxoauWvIGks3a4as9QKs= sha384-vQPhfJdJkfTCHP7ouiqoAojjcDFuU346yP8z/pRpSn0xsWOfkMd+DkNmxns9jy4l sha512-P6CxF6LlmmWe4kVo37D5SJGcvXhesfQO2T2XU0f3EWmslkSg0Rbu8qxUyX9rMX4dle+J71Fl3acSHM+S33OQtg==" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script
@@ -24,73 +24,195 @@
    <body>
       <div data-component-name="OrganizationAdminRosterComponent" class="">
             <div class="classes.admin_title_box">
-                    <h2>Roster</h2>
+                    <h2>Manage Rosters</h2>
             </div>
-            <div class="classes.roster_buttons_box">
-                <select class="ui dropdown">
-                    <option value="">Game</option>
-                    <option value="1">Call of Duty</option>
-                    <option value="0">Overwatch</option>
-                </select>
-                <div class="classes.roster_team_button">Create Team</div>
-            </div>
-            <div class="classes.media_title_box">
-                <h2>Add Twitch Channels</h2>
-            </div>
-            <div class="classes.admin_social_box">
-                <div class="classes.admin_roster_box_inner">
-                <div class="ui fluid input">
-                    <input type="text" placeholder="Channel 1">
-                </div>
-                <div class="classes.admin_social_box_divider"></div>
-                    <div class="ui fluid input">
-                        <input type="text" placeholder="Channel 5">
-                    </div>
-                </div>
-                <div class="classes.admin_roster_box_inner">
-                    <div class="ui fluid input">
-                        <input type="text" placeholder="Channel 2">
-                    </div>
-                    <div class="classes.admin_social_box_divider"></div>
-                    <div class="ui fluid input">
-                        <input type="text" placeholder="Channel 6">
-                    </div>
-                </div>
-                <div class="classes.admin_roster_box_inner">
-                    <div class="ui fluid input">
-                        <input type="text" placeholder="Channel 3">
-                    </div>
-                <div class="classes.admin_social_box_divider"></div>
-                    <div class="ui fluid input">
-                        <input type="text" placeholder="Channel 7">
-                    </div>
-                </div>
-                <div class="classes.admin_roster_box_inner">
-                    <div class="ui fluid input">
-                        <input type="text" placeholder="Channel 4">
-                    </div>
-                    <div class="classes.admin_social_box_divider"></div>
-                    <div class="ui fluid input">
-                        <input type="text" placeholder="Channel 8">
-                    </div>
+            <div class="classes.admin_search_container">
+                <div class="ui action fluid input">
+                    <input type="text" placeholder="Search...">
+                    <div class="ui button">Search</div>
                 </div>
             </div>
-            <div class="classes.admin_submit_box">
-                <div class="classes.admin_submit_button">Submit</div>
+            <div id="game_modal" class="ui modal">
+                <i class="close icon"></i>
+                <div class="classes.modal_inner">
+                    <div class="header">
+                        <div class="classes.admin_title_box">
+                            <h2>Add New Game</h2>
+                        </div>
+                    </div>
+                    <div class="ui fluid input">
+                        <input type="text" placeholder="Team Name">
+                    </div>
+                    <div class="ui simple selection dropdown" style="margin-top:30px;margin-left:auto;margin-right:auto;">
+                        <input type="hidden" name="gender">
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Game</div>
+                        <div class="menu">
+                            <div class="item" data-value="0">Call of Duty</div>
+                            <div class="item" data-value="1">Halo</div>
+                            <div class="item" data-value="2">World of Warcraft</div>
+                            <div class="item" data-value="3">Overwatch</div>
+                            <div class="item" data-value="4">Super Smash Brothers</div>
+                            <div class="item" data-value="5">Starcraft II</div>
+                            <div class="item" data-value="6">Street Fighter</div>
+                        </div>
+                    </div>
+                    <div class="actions">
+                        <div class="classes.team_add_actions" style="float:right;">
+                            <div class="ui black deny button">
+                                Cancel
+                            </div>
+                            <div class="ui positive right labeled icon button">
+                                Save
+                                <i class="checkmark icon"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>        
             </div>
-        </div>
+            <div id="member_modal" class="ui modal">
+                <i class="close icon"></i>
+                <div class="classes.modal_inner">
+                    <div class="header">
+                        <div class="classes.admin_title_box">
+                            <h2>Add New Teammate</h2>
+                        </div>
+                    </div>
+                    <div class="ui fluid input">
+                        <input type="text" placeholder="Member Username">
+                    </div>
+                    <div class="actions">
+                        <div class="classes.team_add_actions">
+                            <div class="ui black deny button">
+                                Cancel
+                            </div>
+                            <div class="ui positive right labeled icon button">
+                                Save
+                                <i class="checkmark icon"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>        
+            </div>
+            <table id="game_table" class="ui selectable celled striped table">
+                <thead>
+                    <tr>
+                    <th colspan="2">Game</th>
+                    </tr>
+                </thead>
+                <tbody data-component-value="{this.props.game_list}">
+                    <tr>
+                    <td onclick="gotoMembers()">Call of Duty</td>
+                    <td class="collapsing" style="background:#dedede;cursor:pointer">Delete</td>
+                    </tr>
+                </tbody>
+                <tfoot class="full-width">
+                    <tr>
+                        <th colspan="1">
+                            <div id="add_game" data-component-props="onClick={this.props.handleClick}" class="ui right floated small primary labeled icon button">
+                                <i class="share icon"></i>Add Game
+                                </div>
+                                <div class="classes.spacer" style="width:10px;display:table;"></div>
+                                <div class="ui right floated pagination menu" data-component-value="{this.props.pagination_content}">
+                                <a class="icon item">
+                                    <i class="left chevron icon"></i>
+                                </a>
+                                <a class="item">1</a>
+                                <a class="item">2</a>
+                                <a class="item">3</a>
+                                <a class="item">4</a>
+                                <a class="icon item">
+                                    <i class="right chevron icon"></i>
+                                </a>
+                            </div>
+                        </th>
+                    </tr>
+                </tfoot>
+            </table>
+            <table id="member_table" class="ui celled striped table">
+                <thead>
+                    <tr>
+                        <th colspan="2">Member</th>
+                    </tr>
+                </thead>
+                <tbody data-component-value="{this.props.game_list}">
+                    <tr>
+                        <td></td>
+                        <td class="collapsing" style="background:#dedede;cursor:pointer">Delete</td>
+                    </tr>
+                </tbody>
+                <tfoot class="full-width">
+                    <tr>
+                        <th>
+                            <div id="add_member" data-component-props="onClick={this.props.handleClick}" class="ui right floated small primary labeled icon button">
+                                <i class="share icon"></i>Add Member
+                                </div>
+                                <div class="classes.spacer" style="width:10px;display:table;"></div>
+                                <div class="ui right floated pagination menu" data-component-value="{this.props.pagination_content}">
+                                <a class="icon item">
+                                    <i class="left chevron icon"></i>
+                                </a>
+                                <a class="item">1</a>
+                                <a class="item">2</a>
+                                <a class="item">3</a>
+                                <a class="item">4</a>
+                                <a class="icon item">
+                                    <i class="right chevron icon"></i>
+                                </a>
+                            </div>
+                        </th>
+                        <th class="collapsed">
+                            <div id="roster_back" class=classes.admin_roster_back>Back</div>
+                        </th>
+                    </tr>
+                </tfoot>
+            </table>
         </div>
    </body>
    <script>
        $( document ).ready(function() {
             console.log( "ready!" );
+
+            $("#add_game").click(function(){
+                $('#game_modal').modal('show');
+            });
+
+            $("#roster_back").click(function(){
+                $("#game_table").show();
+                $("#member_table").hide();
+            });
+
+            $("#add_member").click(function(){
+                $('#member_modal').modal('show');
+            });
+
+            $("#theme_modal_button").click(function(){
+                $('#theme_modal').modal('show');
+            });
+
+            CKEDITOR.replace( 'blog_content' );
         });
 
-        // $('.ui.sidebar').sidebar({
-        //     context: $('.bottom.segment')
-        // })
-        // .sidebar('attach events', '.menu .item');
+        $("#member_table").hide();
 
+        function gotoMembers() {
+            $("#game_table").hide();
+            $("#member_table").show();
+        }
+
+        function readURL(input) {
+            console.log('executing');
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#blog_media_preview')
+                        .attr('src', e.target.result);
+                };
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
 
         $( "#toggle" ).on( "click", function() {
             $('.ui.sidebar').sidebar('toggle');
