--- a/content_builder/src/html/themes/admin/OrganizationAdminRosterComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminRosterComponent.html
@@ -100,16 +100,15 @@
                     <th colspan="2">Game</th>
                     </tr>
                 </thead>
-                <tbody data-component-value="{this.props.game_list}">
+                <tbody>
                     <tr>
-                    <td onclick="gotoMembers()">Call of Duty</td>
-                    <td class="collapsing" style="background:#dedede;cursor:pointer">Delete</td>
+                    <td  data-component-value="{this.props.game_list}">Call of Duty</td>
                     </tr>
                 </tbody>
                 <tfoot class="full-width">
                     <tr>
                         <th colspan="1">
-                            <div id="add_game" data-component-props="onClick={this.props.handleClick}" class="ui right floated small primary labeled icon button">
+                            <div id="add_game" data-component-props="onClick={this.props.handleAddNewGame}" class="ui right floated small primary labeled icon button">
                                 <i class="share icon"></i>Add Game
                                 </div>
                                 <div class="classes.spacer" style="width:10px;display:table;"></div>
@@ -125,44 +124,6 @@
                                     <i class="right chevron icon"></i>
                                 </a>
                             </div>
-                        </th>
-                    </tr>
-                </tfoot>
-            </table>
-            <table id="member_table" class="ui celled striped table">
-                <thead>
-                    <tr>
-                        <th colspan="2">Member</th>
-                    </tr>
-                </thead>
-                <tbody data-component-value="{this.props.game_list}">
-                    <tr>
-                        <td></td>
-                        <td class="collapsing" style="background:#dedede;cursor:pointer">Delete</td>
-                    </tr>
-                </tbody>
-                <tfoot class="full-width">
-                    <tr>
-                        <th>
-                            <div id="add_member" data-component-props="onClick={this.props.handleClick}" class="ui right floated small primary labeled icon button">
-                                <i class="share icon"></i>Add Member
-                                </div>
-                                <div class="classes.spacer" style="width:10px;display:table;"></div>
-                                <div class="ui right floated pagination menu" data-component-value="{this.props.pagination_content}">
-                                <a class="icon item">
-                                    <i class="left chevron icon"></i>
-                                </a>
-                                <a class="item">1</a>
-                                <a class="item">2</a>
-                                <a class="item">3</a>
-                                <a class="item">4</a>
-                                <a class="icon item">
-                                    <i class="right chevron icon"></i>
-                                </a>
-                            </div>
-                        </th>
-                        <th class="collapsed">
-                            <div id="roster_back" class=classes.admin_roster_back>Back</div>
                         </th>
                     </tr>
                 </tfoot>
