changed landing page logo and bg

--- a/content_builder/src/html/themes/landing/OriginLandingPage.html
+++ b/content_builder/src/html/themes/landing/OriginLandingPage.html
@@ -29,7 +29,7 @@
                 <div id="landing_welcome" class="classes.landing_outer_welcome_container">
                         <div class=classes.landing_welcome_container>
                             <div class="classes.landing_welcome_lines_container">
-                                <img class="classes.landing_welcome_lines_image" src="./images/logo-top1.png" />
+                                <img class="classes.landing_welcome_lines_image" src="./../../images/origin_logo.png" />
                             </div>
                         </div>
                 </div>
@@ -72,35 +72,35 @@
                             <div class="ui three column grid">
                                 <div class="column">
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image_container" src="./../../images/human.jpg" />
                                     </div>
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image_container" src="./../../images/human.jpg" />
                                     </div>
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
-                                    </div>
-                                    <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
-                                    </div>
-                                    <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image_container" src="./../../images/human.jpg" />
                                     </div>
                                 </div>
                                 <div class="column">
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image_container" src="./../../images/human.jpg" />
                                     </div>
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image_container" src="./../../images/human.jpg" />
                                     </div>
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image_container" src="./../../images/human.jpg" />
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <div class="classes.landing_individual_image_container">
+                                        <img class="classes.landing_individual_image_container" src="./../../images/human.jpg" />
+                                    </div>
+                                    <div class="classes.landing_individual_image_container">
+                                        <img class="classes.landing_individual_image_container" src="./../../images/human.jpg" />
+                                    </div>
+                                    <div class="classes.landing_individual_image_container">
+                                        <img class="classes.landing_individual_image_container" src="./../../images/human.jpg" />
                                     </div>
                                 </div>
                             </div>
