--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Origin Landing Page</title>
+      <title>Origin Demo Landing Page</title>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" integrity="sha256-oDCP2dNW17Y1QhBwQ+u2kLaKxoauWvIGks3a4as9QKs= sha384-vQPhfJdJkfTCHP7ouiqoAojjcDFuU346yP8z/pRpSn0xsWOfkMd+DkNmxns9jy4l sha512-P6CxF6LlmmWe4kVo37D5SJGcvXhesfQO2T2XU0f3EWmslkSg0Rbu8qxUyX9rMX4dle+J71Fl3acSHM+S33OQtg==" crossorigin="anonymous">
       <script
          src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -15,8 +15,8 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jss/9.8.1/jss.min.js"></script>   
       <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>    
       <script type="module">
-         import { GlobalTheme, GlobalStyles } from './Theme.js'
-         import {attach_styles} from './attach-styles.js';
+         import { GlobalTheme, GlobalStyles } from '/Theme.js'
+         import {attach_styles} from '/attach-styles.js';
          attach_styles(GlobalTheme, GlobalStyles, 'classes');
       </script>    
     </head>
@@ -29,7 +29,7 @@
                 <div id="landing_welcome" class="classes.landing_outer_welcome_container">
                         <div class=classes.landing_welcome_container>
                             <div class="classes.landing_welcome_lines_container">
-                                <img class="classes.landing_welcome_lines_image" src="./images/logo-top1.png" />
+                                <img class="classes.landing_welcome_lines_image" src="./images/origin_logo.png" />
                             </div>
                         </div>
                 </div>
@@ -72,35 +72,35 @@
                             <div class="ui three column grid">
                                 <div class="column">
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image" src="./images/human.jpg" />
                                     </div>
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image" src="./images/human.jpg" />
                                     </div>
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
-                                    </div>
-                                    <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
-                                    </div>
-                                    <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image" src="./images/human.jpg" />
                                     </div>
                                 </div>
                                 <div class="column">
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image" src="./images/human.jpg" />
                                     </div>
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image" src="./images/human.jpg" />
                                     </div>
                                     <div class="classes.landing_individual_image_container">
-                                        <img class="classes.landing_individual_image_container" src="./images/human.jpg" />
+                                        <img class="classes.landing_individual_image" src="./images/human.jpg" />
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <div class="classes.landing_individual_image_container">
+                                        <img class="classes.landing_individual_image" src="./images/human.jpg" />
+                                    </div>
+                                    <div class="classes.landing_individual_image_container">
+                                        <img class="classes.landing_individual_image" src="./images/human.jpg" />
+                                    </div>
+                                    <div class="classes.landing_individual_image_container">
+                                        <img class="classes.landing_individual_image" src="./images/human.jpg" />
                                     </div>
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
                         </div>  
                     </div>
                 </div>
-                <div id="landing_upcoming" class="classes.landing_content_container">
+                <div id="landing_upcoming" class="classes.landing_upcoming_content_container">
                     <div class="ui stackable two column grid">
                         <div class="column">
                             <div class="classes.upcoming_header">Upcoming Features</div>
@@ -168,11 +168,9 @@
                     <div id="menu_why" class="classes.menu_modal_item_container">Why Origin?</div>
                     <div id="menu_upcoming" class="classes.menu_modal_item_container">Upcoming Features</div>
                 </div>
-                <a href="/signup">
                 <div class="classes.landing_page_button_container">
                     <div class="classes.landing_page_join_button">Build Your Empire Now</div>
                 </div>
-                </a>
                 <div class="classes.landing_footer">
                     <p class="classes.landing_footer_text">© Origin. All rights reserved.</p>
                 </div>
