--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -168,9 +168,11 @@
                     <div id="menu_why" class="classes.menu_modal_item_container">Why Origin?</div>
                     <div id="menu_upcoming" class="classes.menu_modal_item_container">Upcoming Features</div>
                 </div>
-                <div class="classes.landing_page_button_container">
-                    <div class="classes.landing_page_join_button">Build Your Empire Now</div>
-                </div>
+                <a href="/signup">
+                    <div class="classes.landing_page_button_container">
+                        <div class="classes.landing_page_join_button">Build Your Empire Now</div>
+                    </div>
+                </a>
                 <div class="classes.landing_footer">
                     <p class="classes.landing_footer_text">© Origin. All rights reserved.</p>
                 </div>
