--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -153,7 +153,7 @@
                         </div>
                         <div class="column">
                             <div class="classes.landing_upcoming_video">
-                                <iframe title="ifr" width="560" height="315" src="https://www.youtube.com/embed/W0VxEg28UwA" frameborder="0" allowfullscreen="" style="border-width: 1px; border-color: white; border-style: solid; margin-left:auto;margin-right:auto;"></iframe>
+                                <iframe title="ifr" width="100%" height="315" src="https://www.youtube.com/embed/W0VxEg28UwA" frameborder="0" allowfullscreen="" style="border-width: 1px; border-color: white; border-style: solid; margin-left:auto;margin-right:auto;"></iframe>
                             </div>
                         </div>
                     </div>
