--- a/content_builder/src/html/themes/enigma/light/OrganizationLogoComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationLogoComponent.html
@@ -24,10 +24,8 @@
    <body>
         <div data-component-name="obliviot_OrganizationLogoComponent" class="classes.obliviotBG">
             <img class="classes.obliviot_main_image" data-component-props="src={this.props.image_src}" />
-            <div class="classes.obliviot_main_image_text_container" data-component-value="{this.props.roster_games}">
-                <div class="classes.obliviot_main_image_text">Call of Duty</div>
-                <div class="classes.obliviot_main_image_text">Halo</div>
-                <div class="classes.obliviot_main_image_text">Ms Pacman</div>
+            <div class="classes.obliviot_main_image_text_container" >
+                <div class="classes.dark_main_image_text" data-component-value="{this.props.roster_games}">Ms Pacman</div>
             </div>    
         </div>
    </body>
