--- a/content_builder/src/html/themes/enigma/light/OrganizationRosterItemComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationRosterItemComponent.html
@@ -27,18 +27,18 @@
                 <div class="ui stackable two column grid">
                     <div class="three wide column">
                         <div class="classes.roster_item_img_container">
-                            <img class="classes.roster_item_img" src="./images/matthew.png" />
+                            <img data-component-props="src={this.props.roster_image}" class="classes.roster_item_img" src="./images/matthew.png" />
                         </div>
                     </div>
                     <div class="thirteen wide column">
                         <div style="display: table; padding-top: 10px; padding-bottom: 10px">
                             <div class="classes.roster_item_name_container">
-                                <span class="classes.roster_name">Bobby Jones</span>
+                                <span data-component-value="{this.props.roster_name}" class="classes.roster_name">Bobby Jones</span>
                                 <span class="classes.roster_divider">|</span>
-                                <span class="classes.roster_name">ThunderDude</span>
+                                <span data-component-value="{this.props.roster_nickname}" class="classes.roster_name">ThunderDude</span>
                             </div>
                             <div class="classes.roster_item_about_container">
-                                <span class="classes.roster_about_text">Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years.</span>
+                                <span data-component-value="{this.props.roster_about}" class="classes.roster_about_text">Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years.</span>
                             </div>
                             <div class="classes.roster_item_social_container">
                                 <div class="classes.roster_item_social_icon"><i class="fa fa-twitter"></i></div>
