--- a/content_builder/src/html/themes/enigma/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationPageComponent.html
@@ -40,8 +40,11 @@
                                 <div id="theme_about_modal">
                     
                                 </div>
-                                <div data-component-value="{this.props.rosterContent}" id="roster_component" class="classes.roster_body_container">
+                                <div data-component-props="style={this.props.roster_style}" >
+
+                                 <div data-component-value="{this.props.rosterContent}" id="roster_component" class="classes.roster_body_container">
                                 
+                                 </div>
                                 </div>
                                 <div id="#news_cont" class="ui stackable three column grid">
                                     <div id="news_component" class="column">
