--- a/content_builder/src/html/themes/enigma/light/OrganizationMobileMenuComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationMobileMenuComponent.html
@@ -58,6 +58,14 @@
                                 Youtube
                             </a>
                 </div>
+                <div class="classes.obliviot_mobile_menu_item">
+                        <a class="classes.obliviot_mobile_menu_item_box">
+                                Rosters
+                            </a>
+                </div>
+                <div id="rosters" class="obliviot.dark_mobile_menu_item">
+                        
+                    </div>
             </div>
       </div>
    </body>
