added fields to individual sign up

--- a/content_builder/src/html/themes/base/SignupComponent.html
+++ b/content_builder/src/html/themes/base/SignupComponent.html
@@ -31,12 +31,28 @@
                     <form class="ui large form" data-component-props="onSubmit={this.props.handleSubmit}" >
                         <div class="ui stacked segment">
                            <div class="classes.form_body"> 
+                                <div class="classes.input_title">
+                                    First Name
+                                </div>
+                                <div class="field">
+                                    <div class="ui input">
+                                        <input class="classes.input_box" type="text" name="name" placeholder="First Name" style="background-color:transparent;border-color: #fff; color:#fff; height: 45px; font-size: 16px;" type="text" name="name" placeholder="Name" >
+                                    </div>
+                                </div>
                                <div class="classes.input_title">
-                                   Name
+                                   Last Name
                                </div>
                                <div class="field">
                                     <div class="ui input">
-                                        <input data-component-props="onBlur={this.props.handleBlur} onChange={this.props.handleChange} value={this.props.values.name}" class="classes.input_box" type="text" name="name" placeholder="Name" style="background-color:transparent;border-color: #fff; color:#fff; height: 45px; font-size: 16px;" type="text" name="name" placeholder="Name" >
+                                        <input data-component-props="onBlur={this.props.handleBlur} onChange={this.props.handleChange} value={this.props.values.name}" class="classes.input_box" type="text" name="name" placeholder="Last Name" style="background-color:transparent;border-color: #fff; color:#fff; height: 45px; font-size: 16px;" type="text" name="name" placeholder="Name" >
+                                    </div>
+                                </div>
+                                <div class="classes.input_title">
+                                    Username
+                                </div>
+                                <div class="field">
+                                    <div class="ui input">
+                                        <input class="classes.input_box" type="text" name="name" placeholder="Username" style="background-color:transparent;border-color: #fff; color:#fff; height: 45px; font-size: 16px;" type="text" name="name" placeholder="Name" >
                                     </div>
                                 </div>
                                 <div class="classes.input_title">
