--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -168,7 +168,7 @@
                     <div id="menu_why" class="classes.menu_modal_item_container">Why Origin?</div>
                     <div id="menu_upcoming" class="classes.menu_modal_item_container">Upcoming Features</div>
                 </div>
-                <a href="/signup">
+                <a href="http://localhost:3000/signup">
                     <div class="classes.landing_page_button_container">
                         <div class="classes.landing_page_join_button">Build Your Empire Now</div>
                     </div>
