--- a/content_builder/src/html/themes/enigma/light/OrganizationMobileSubMenuComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationMobileSubMenuComponent.html
@@ -23,7 +23,7 @@
    <body>
       <div data-component-name="obliviot_OrganizationMobileSubMenuComponent">
         <a class="classes.obliviot_mobile_submenu_item_box">
-                <span id="submenu_item">Call of Duty</span>
+                <span data-component-value="{this.props.name}" id="submenu_item">Call of Duty</span>
         </a>
       </div>
    </body>
