--- a/content_builder/src/html/themes/enigma/dark/OrganizationMobileSubMenuComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationMobileSubMenuComponent.html
@@ -23,7 +23,7 @@
    <body>
       <div data-component-name="dark_OrganizationMobileSubMenuComponent">
                 <a class="classes.dark_mobile_submenu_item_box">
-                        <span id="submenu_item">Call of Duty</span>
+                        <span data-component-value="{this.props.name}" id="submenu_item">Call of Duty</span>
                 </a>
       </div>
    </body>
