--- a/content_builder/src/html/themes/enigma/light/OrganizationMobileMenuComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationMobileMenuComponent.html
@@ -59,9 +59,10 @@
                             </a>
                 </div>
                 <div class="classes.obliviot_mobile_menu_item">
-                        <a class="classes.obliviot_mobile_menu_item_box">
+                        <div class="classes.obliviot_mobile_menu_item_box">
                                 Rosters
-                            </a>
+                            </div>
+                        <div data-component-value="{this.props.rosterContent}">Blah<div />
                 </div>
                 <div id="rosters" class="obliviot.dark_mobile_menu_item">
                         
