--- a/content_builder/src/html/themes/enigma/dark/OrganizationDemoRosterPage.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationDemoRosterPage.html
@@ -47,7 +47,7 @@
                         <div class="ui stackable two column grid">
                             <div class="three wide column">
                                 <div class="classes.roster_item_img_container">
-                                    <img class="classes.roster_item_img" src="./images/matthew.png" />
+                                    <img class="classes.roster_item_img" src="../../../images/matthew.png" />
                                 </div>
                             </div>
                             <div class="thirteen wide column">
@@ -58,7 +58,7 @@
                                         <span class="classes.roster_name">ThunderDude</span>
                                     </div>
                                     <div class="classes.roster_item_about_container">
-                                        <span class="classes.roster_about_text">Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years.</span>
+                                        <span class="classes.roster_about_text"></span>
                                     </div>
                                     <div class="classes.roster_item_social_container">
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-twitter"></i></div>
@@ -74,7 +74,7 @@
                         <div class="ui stackable two column grid">
                             <div class="three wide column">
                                 <div class="classes.roster_item_img_container">
-                                    <img class="classes.roster_item_img" src="./images/matthew.png" />
+                                    <img class="classes.roster_item_img" src="../../../images/matthew.png" />
                                 </div>
                             </div>
                             <div class="thirteen wide column">
@@ -101,7 +101,7 @@
                         <div class="ui stackable two column grid">
                             <div class="three wide column">
                                 <div class="classes.roster_item_img_container">
-                                    <img class="classes.roster_item_img" src="./images/matthew.png" />
+                                    <img class="classes.roster_item_img" src="../../../images/matthew.png" />
                                 </div>
                             </div>
                             <div class="thirteen wide column">
@@ -128,7 +128,7 @@
                         <div class="ui stackable two column grid">
                             <div class="three wide column">
                                 <div class="classes.roster_item_img_container">
-                                    <img class="classes.roster_item_img" src="./images/matthew.png" />
+                                    <img class="classes.roster_item_img" src="../../../images/matthew.png" />
                                 </div>
                             </div>
                             <div class="thirteen wide column">
