--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
    <head>
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119536253-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-119536253-1');
+</script>
+
       <!-- Standard Meta -->
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -333,8 +343,4 @@
             $('#menu_welcome').delay(500).animate({ opacity: 0 }, 700)
             $('#menu_organization').delay(750).animate({ opacity: 0 }, 700)
             $('#menu_individual').delay(100).animate({ opacity: 0 }, 700)
-            $('#menu_why').delay(1250).animate({ opacity: 0 }, 700)
-            $('#menu_upcoming').delay(2000).animate({ opacity: 0 }, 700)
-        });
-    </script>
-</html>
+ 
