--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -154,7 +154,7 @@
                         <div class="column">
                             <div class="classes.landing_upcoming_video">
                                 <div class="classes.landing_upcoming_video_container">
-                                    <iframe title="ifr" class="classes.landing_upcoming_video_iframe" src="https://www.youtube.com/watch?v=eXzSeGxjPCs" frameborder="0" allowfullscreen="" style="border-width: 1px; border-color: white; border-style: solid; margin-left:auto;margin-right:auto;"></iframe>
+                                    <iframe title="ifr" class="classes.landing_upcoming_video_iframe" src="https://www.youtube.com/embed/eXzSeGxjPCs" frameborder="0" allowfullscreen="" style="border-width: 1px; border-color: white; border-style: solid; margin-left:auto;margin-right:auto;"></iframe>
                                 </div>
                             </div>
                         </div>
