--- a/content_builder/src/html/themes/individual/IndividualBasicInfoComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualBasicInfoComponent.html
@@ -28,8 +28,8 @@
                 <div class="classes.individual_profile_pic_container">
                     <img class="classes.individual_profile_pic" data-component-props="src={this.props.profileImageUrl}" src="./images/matthew.png"/>
                 </div>
-                <div data-component-value="{this.props.firstName}" class="classes.individual_basic_name">John Doe</div>
-                <div data-component-value="{this.props.twitterHandle}" class="classes.individual_basic_handle">@JohnDoe</div>
+                <div data-component-value="{this.props.name}" class="classes.individual_basic_name">John Doe</div>
+                <div data-component-value="{this.props.username}" class="classes.individual_basic_handle">@JohnDoe</div>
                 <div class="classes.individual_table_container">
                     <table class="ui table">
                         <thead>
