--- a/content_builder/src/html/themes/individual/IndividualDemoPage.html
+++ b/content_builder/src/html/themes/individual/IndividualDemoPage.html
@@ -107,7 +107,27 @@
                                                     YouTube Stats
                                                 </h2>
                                                 <div class="classes.individual_social_content">
-                                                    <h2 class="classes.individual_social_empty">No Data Found</h2>
+                                                    <h2 class="classes.individual_social_empty">My Youtube Channel</h2>
+                                                </div>
+                                                <div id="yt_views" class="classes.indiviual_stats_container">
+                                                    <span class="classes.individual_stats_title">Views: </span>
+                                                    <span class="classes.individual_stats_data">12345</span>
+                                                </div>
+                                                <div id="yt_subscribers" class="classes.indiviual_stats_container">
+                                                    <span class="classes.individual_stats_title">Subscribers: </span>
+                                                    <span class="classes.individual_stats_data">150</span>
+                                                </div>
+                                                <div id="yt_comments" class="classes.indiviual_stats_container">
+                                                    <span class="classes.individual_stats_title">Comments: </span>
+                                                    <span class="classes.individual_stats_data">0</span>
+                                                </div>
+                                                <div id="yt_videos" class="classes.indiviual_stats_container">
+                                                    <span class="classes.individual_stats_title">Videos: </span>
+                                                    <span class="classes.individual_stats_data">10</span>
+                                                </div>
+                                                <div id="yt_vpv" class="classes.indiviual_stats_container">
+                                                    <span class="classes.individual_stats_title">Views Per Video: </span>
+                                                    <span class="classes.individual_stats_data">1234</span>
                                                 </div>
                                             </div>
                                         </div>
