--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
        <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119536253-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,6 +11,7 @@
 
   gtag('config', 'UA-119536253-1');
 </script>
+
 
       <!-- Standard Meta -->
       <meta charset="utf-8" />
