Add youtube stats

--- a/content_builder/src/html/themes/individual/IndividualYoutubeStatsComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualYoutubeStatsComponent.html
@@ -29,27 +29,27 @@
                             YouTube Stats
                     </h2>
                     <div id="channel_name" class="classes.individual_social_content">
-                        <h2 class="classes.individual_social_empty">My Youtube Channel</h2>
+                        <h2 data-component-value="{this.props.channel_name}" class="classes.individual_social_empty">My Youtube Channel</h2>
                     </div>
                     <div id="yt_views" class="classes.indiviual_stats_container">
                         <span class="classes.individual_stats_title">Views: </span>
-                        <span class="classes.individual_stats_data">12345</span>
+                        <span data-component-value="{this.props.channel_views}" class="classes.individual_stats_data">12345</span>
                     </div>
                     <div id="yt_subscribers" class="classes.indiviual_stats_container">
                         <span class="classes.individual_stats_title">Subscribers: </span>
-                        <span class="classes.individual_stats_data">150</span>
+                        <span data-component-value="{this.props.channel_subscribers}" class="classes.individual_stats_data">150</span>
                     </div>
                     <div id="yt_comments" class="classes.indiviual_stats_container">
                         <span class="classes.individual_stats_title">Comments: </span>
-                        <span class="classes.individual_stats_data">0</span>
+                        <span data-component-value="{this.props.channel_comments}" class="classes.individual_stats_data">0</span>
                     </div>
                     <div id="yt_videos" class="classes.indiviual_stats_container">
                         <span class="classes.individual_stats_title">Videos: </span>
-                        <span class="classes.individual_stats_data">10</span>
+                        <span data-component-value="{this.props.channel_videos}" class="classes.individual_stats_data">10</span>
                     </div>
                     <div id="yt_vpv" class="classes.indiviual_stats_container">
                         <span class="classes.individual_stats_title">Views Per Video: </span>
-                        <span class="classes.individual_stats_data">1234</span>
+                        <span data-component-value="{this.props.channel_views_per_video}" class="classes.individual_stats_data">1234</span>
                     </div>
             </div>               
         </div>
