--- a/content_builder/src/html/themes/enigma/dark/OrganizationLogoComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationLogoComponent.html
@@ -24,7 +24,7 @@
    <body>
         <div data-component-name="dark_OrganizationLogoComponent" class="classes.darkBG">
             <img class="classes.dark_main_image" data-component-props="src={this.props.image_src}" />
-            <div class="classes.dark_main_image_text_container" >
+            <div class="classes.dark_main_image_text_container" data-component-props="style={this.props.roster_style}">
                 <div class="classes.dark_main_image_text" data-component-value="{this.props.roster_games}">Call of Duty</div>
             </div>    
         </div>
