added new components for individuals and changed layout. Updated components.js

--- a/content_builder/src/html/themes/individual/IndividualDemoPage.html
+++ b/content_builder/src/html/themes/individual/IndividualDemoPage.html
@@ -133,6 +133,34 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="eight wide column">
+                                    <div class="ui one column grid">
+                                        <div class="column">
+                                            <div class="classes.individual_social_box">
+                                                <h2 class="classes.individual_social_header">
+                                                    Twitter Stats
+                                                </h2>
+                                                <div class="classes.individual_social_content">
+                                                    <h2 class="classes.individual_social_empty">No Data Found</h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="eight wide column">
+                                    <div class="ui one column grid">
+                                        <div class="column">
+                                            <div class="classes.individual_social_box">
+                                                <h2 class="classes.individual_social_header">
+                                                    Instagram Stats
+                                                </h2>
+                                                <div class="classes.individual_social_content">
+                                                    <h2 class="classes.individual_social_empty">No Data Found</h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>  
@@ -175,6 +203,7 @@
                         <textarea class="classes.modal_individual_edit_about" rows="10" placeholder="Accomplishments"></textarea>
                         <input class="classes.modal_individual_edit_input" placeholder="Twitch" />
                         <input class="classes.modal_individual_edit_input" placeholder="Youtube" />
+                        <input class="classes.modal_individual_edit_input" placeholder="Instagram" />
                         <div class="classes.modal_individual_submit_button_container">
                             <div class="classes.modal_individual_submit_button">Cancel</div>
                         </div>
