--- a/content_builder/src/html/themes/individual/IndividualPageComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualPageComponent.html
@@ -57,6 +57,20 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="eight wide column">
+                                    <div class="ui one column grid">
+                                        <div data-component-value="{this.props.ColumnFour}" id="stats_leftbottom" class="column">
+                                                
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="eight wide column">
+                                    <div class="ui one column grid">
+                                        <div data-component-value="{this.props.ColumnFive}" id="stats_rightbottom" class="column">
+                                            
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>  
