--- a/content_builder/src/html/themes/individual/IndividualTwitterStatsComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualTwitterStatsComponent.html
@@ -28,7 +28,7 @@
                 <h2 class="classes.individual_social_header">
                     Twitter Stats
                 </h2>
-                <div class="classes.individual_social_content" data-component-value="{this.props.twitch_stats}">
+                <div class="classes.individual_social_content" data-component-value="{this.props.twitter_stats}">
                     <h2 class="classes.individual_social_empty">No Data Found</h2>
                 </div>
             </div>               
